--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       rel="stylesheet"
     />
 
+    <!-- Poppins Google Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome To WorkMan | WorkMan</title>
   </head>
